--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
 
 <!-- collegamento Bootstrap  -->   
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
 
 <!-- collegamento per non far apparire errore in console-->  
   <link rel="shortcut icon" href="#">
@@ -24,7 +24,33 @@
 <body>
   
   <div id="app">
-    {{saluto}}
+    
+    <div class="container">
+      <div class="container-top"></div>
+      <div class="container-down"></div>
+      <div class="box">
+        <div class="box-left">
+          <div class="top">
+         
+          </div>
+          <div class="main">
+            <section><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi quibusdam et, fugiat saepe provident exercitationem!</p></section>
+            <section><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi quibusdam et, fugiat saepe provident exercitationem!</p></section>
+
+          </div>
+        </div>
+        <div class="box-right">
+          <div class="top"></div>
+          <div class="main">
+            <section><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi quibusdam et, fugiat saepe provident exercitationem!</p></section>
+            <section><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi quibusdam et, fugiat saepe provident exercitationem!</p></section>
+
+          </div>
+          <div class="bottom"></div>
+        </div>
+      </div>
+    </div>
+
   </div>
 
 <!-- collegamento a Vue  --> 
