--- a/index.html
+++ b/index.html
@@ -29,18 +29,62 @@
       <div class="container-top"></div>
       <div class="container-down"></div>
       <div class="box">
+
+        <!-- BOX-LEFT  -->
+
         <div class="box-left">
+
+          <!-- top  -->
+
           <div class="top">
-         
+            <div class="avatar">
+              <img src="img/avatar_1.jpg" alt="">
+              <span>nome utente</span>
+            </div>
+            <div class="utilities">
+              <i class="fas fa-circle-notch"></i>
+              <i class="fas fa-comment-alt"></i>
+              <i class="fas fa-ellipsis-v"></i>
+            </div>
           </div>
+
+          <!-- main  -->
+
           <div class="main">
+            <section class="notifiche">
+              <i class="fas fa-bell-slash"></i>
+              <div class="action">
+                <h4>ricevi notifiche di nuovi messaggi</h4>
+                <span>attiva notifiche desktop</span>
+              </div>
+            </section>
+            <section class="input">
+              <input type="text" placeholder="cerca o inizia una nuova chat">
+              <i class="fas fa-search"></i>
+            </section>
             <section><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi quibusdam et, fugiat saepe provident exercitationem!</p></section>
             <section><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi quibusdam et, fugiat saepe provident exercitationem!</p></section>
 
           </div>
         </div>
+
+        <!-- BOX-RIGHT  -->
+
         <div class="box-right">
-          <div class="top"></div>
+          <div class="top">
+            <div class="avatar">
+              <img src="img/avatar_1.jpg" alt="">
+              <div class="avatar-info">
+                <div class="nome">nome utente</div>
+                <div class="data">ultimo accesso oggi alle 10/01/2020 alle 13.45</div>
+              </div>
+            </div>
+            <div class="utilities">
+              <i class="fas fa-search"></i>
+              <i class="fas fa-paperclip"></i>
+              <i class="fas fa-ellipsis-v"></i>
+            </div>
+          </div>
           <div class="main">
             <section><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi quibusdam et, fugiat saepe provident exercitationem!</p></section>
             <section><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi quibusdam et, fugiat saepe provident exercitationem!</p></section>
