--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans:ital@1&family=Roboto&display=swap" rel="stylesheet">
 <!-- collegamento per non far apparire errore in console-->  
   <link rel="shortcut icon" href="#">
 
@@ -42,8 +41,8 @@
 
           <div class="top">
             <div class="avatar">
-              <img src="img/avatar_1.jpg" alt="">
-              <span>nome utente</span>
+              <img src="img/avatar_5.jpg" alt="">
+              <span>Nome Utente</span>
             </div>
             <div class="utilities">
               <i class="fas fa-circle-notch"></i>
@@ -58,8 +57,8 @@
             <section class="notifiche">
               <i class="fas fa-bell-slash"></i>
               <div class="action">
-                <h4>ricevi notifiche di nuovi messaggi</h4>
-                <span>attiva notifiche desktop</span>
+                <h4>Ricevi notifiche di nuovi messaggi</h4>
+                <span>Attiva notifiche desktop</span>
               </div>
             </section>
             <section class="input">
@@ -78,27 +77,27 @@
               </div>
 
               <div class="utente">
-                <img src="img/avatar_1.jpg" alt="">
+                <img src="img/avatar_2.jpg" alt="">
                 <div class="utente-more">
-                  <div class="nome">Michele</div>
+                  <div class="nome">Antonio</div>
                   <div class="ultimo-msg">Tutto fatto!...</div>
                   <div class="data"> 10/01/2020 alle 13.45</div>
                 </div>
               </div>
 
               <div class="utente">
-                <img src="img/avatar_1.jpg" alt="">
+                <img src="img/avatar_3.jpg" alt="">
                 <div class="utente-more">
-                  <div class="nome">Michele</div>
+                  <div class="nome">Francesco</div>
                   <div class="ultimo-msg">Tutto fatto!...</div>
                   <div class="data"> 10/01/2020 alle 13.45</div>
                 </div>
               </div>
 
               <div class="utente">
-                <img src="img/avatar_1.jpg" alt="">
+                <img src="img/avatar_4.jpg" alt="">
                 <div class="utente-more">
-                  <div class="nome">Michele</div>
+                  <div class="nome">Ugo</div>
                   <div class="ultimo-msg">Tutto fatto!...</div>
                   <div class="data"> 10/01/2020 alle 13.45</div>
                 </div>
@@ -116,7 +115,7 @@
             <div class="avatar">
               <img src="img/avatar_1.jpg" alt="">
               <div class="avatar-info">
-                <div class="nome">nome utente</div>
+                <div class="nome">Michele</div>
                 <div class="data">ultimo accesso oggi alle 10/01/2020 alle 13.45</div>
               </div>
             </div>
