--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           </div>
           <div class="bottom">
             <i class="far fa-smile"></i>
-            <input v-model="valore" @keyup.enter=saluto(valore) type="text" placeholder="scrivi un messaggio">
+            <input v-model="x" @keyup.enter='saluto(x)' type="text" placeholder="scrivi un messaggio">
             <i class="fas fa-microphone"></i>
           </div>
         </div>
