--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div class="utente-more">
                   <div class="nome">{{contact.name}}</div>
                   <div class="ultimo-msg">{{last_msg[index]}}</div>
-                  <div class="data"> {{last_date[index]}}</div>
+                  <div class="data"> {{contact.messages[contact.messages.length-1].date}}</div>
                 </div>
               </div>
 
@@ -131,6 +131,14 @@
     </div>
 
   </div>
+
+<!-- Day Js - core -->
+<script src="https://cdn.jsdelivr.net/npm/dayjs@1.10.7/dayjs.min.js"></script>
+<!-- Day Js - plugin -->
+<script src="https://cdn.jsdelivr.net/npm/dayjs@1.10.7/plugin/customParseFormat.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/dayjs@1.10.7/plugin/relativeTime.js"></script>
+<!-- Day Js - locale -->
+<script src="https://cdn.jsdelivr.net/npm/dayjs@1.10.7/locale/it.js"></script>  
 
 <!-- collegamento a Vue  --> 
   <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
